@@ -1,0 +1,35 @@
+use strict;
+use warnings FATAL => 'all';
+
+use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
+use Test::DZil;
+use Test::Fatal;
+use Path::Tiny;
+
+my $tzil = Builder->from_config(
+    { dist_root => 't/does-not-exist' },
+    {
+        add_files => {
+            path(qw(source dist.ini)) => simple_ini(
+                [ GatherDir => ],
+                [ MetaConfig => ],
+                [ 'AuthorityFromModule' => { module => 'I::Do::Not::Exist' } ],
+            ),
+            path(qw(source lib Foo.pm)) => "package Foo;\n1;\n",
+            path(qw(source lib Foo Bar.pm)) => "package Foo::Bar;\n1;\n",
+        },
+    },
+);
+
+$tzil->chrome->logger->set_debug(1);
+like(
+    exception { $tzil->build },
+    qr/^\[AuthorityFromModule\] the module 'I::Do::Not::Exist' cannot be found in the distribution/,
+    'build halts with a reasonable error message',
+);
+
+diag 'got log messages: ', explain $tzil->log_messages
+    if not Test::Builder->new->is_passing;
+
+done_testing;
